--- a/XuatBangId_Danang_Haiphong/App.config
+++ b/XuatBangId_Danang_Haiphong/App.config
@@ -1,6 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add description=".Net Framework Data Provider for MySQL" invariant="MySql.Data.MySqlClient" name="MySQL Data Provider" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.10.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data>
+
+  <appSettings>
+    <add key="host" value="192.168.1.127"/>
+    <add key="db" value="dulieu_convert"/>
+    <add key="username" value="root"/>
+    <add key="password" value="123"/>
+  </appSettings>
+
 </configuration>
